# Bashmark

./: CMakeLists.txt  bashmark-1.0.deb  license.txt  readme.md
_CPack_Packages/Linux/DEB/bashmark-1.0.0-Linux/: control  md5sums
assets/: menu.txt
bashmark-1.0/DEBIAN/: control
include/: cpu_benchmark.hpp  full_benchmark.hpp  gpu_benchmark.hpp  input.hpp  multicore.hpp  single_core.hpp  ui.hpp
src/: cpu_benchmark.cpp  full_benchmark.cpp  gpu_benchmark.cpp  main.cpp  multicore.cpp  singlecore.cpp  ui.cpp
